create header component (challenge 2), render total number of abands (challenge 3) and create a band component for array mapping (challenge 4)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metal-bands",
+  "name": "brooklyndippo-acs-1320-final",
   "homepage": "http://brooklyndippo.github.io/metal-bands",
   "version": "0.1.0",
   "private": true,
